--- a/profile.html
+++ b/profile.html
@@ -87,7 +87,7 @@
 
     <section id="papers">
         <h2>工作论文</h2>
-        <a href="D:\Desktop\发展经济学论文大赛\论文撰写\DIF&inequality.pdf" class="link-button">获取我的工作论文</a>
+        <a href="https://github.com/Leiwei286/leiwei/blob/working-papers/DIF%26inequality.pdf" class="link-button">获取我的工作论文</a>
     </section>
 </div>
 
