--- a/profile.html
+++ b/profile.html
@@ -94,8 +94,8 @@
     <section id="papers">
         <h2>工作论文</h2>
         <ul class="paper-list">
-            <li><a href="https://github.com/Leiwei286/leiwei/blob/working-papers/DIF%26inequality.pdf" class="paper-link">雷伟.数字普惠金融对收入不平等的影响.2024</a></li>
-            <li><a href="*" class="paper-link">在研</a></li>
+            <li><a href="https://github.com/Leiwei286/leiwei/blob/working-papers/DIF%26inequality.pdf" class="paper-link">数字普惠金融对收入不平等的影响.2024.独立作者</a></li>
+            <li><a href="*" class="paper-link">制度成本与企业新质生产力——基于跨境电商综试区的考察.2024.第一作者</a></li>
             <li><a href="*" class="paper-link">在研</a></li>
         </ul>
     </section>
