--- a/profile.html
+++ b/profile.html
@@ -89,7 +89,8 @@
     <section id="education">
         <h2>教育背景</h2>
         <ul>
-            <li>西南财经大学 - 经济学学士 - 2020.09-至今</li>
+            <li>西南财经大学 - 经济学学士 - 2020.09-2024.06</li>
+            <li>西南财经大学 - 西方经济学硕士 - 2024.09-至今</li>
         </ul>
     </section>
 
@@ -125,12 +126,29 @@
             <li>
                 <a onclick="toggleAbstract('abstract2')" class="paper-link">制度成本与企业新质生产力——基于跨境电商综试区的考察.2024.第一作者</a>
                 <div id="abstract2" class="abstract">
-                    本文使用2011-2020年中国A股上市公司数据，借助中国跨境电子商务综合试验区政策这一能够有效降低制度成本的外生冲击，创新性地采用多期双重差分模型首次在实证层面考察了制度成本与企业新质生产力的关系，规避了制度成本难以衡量的难题，主要发现包括：①制度成本的降低可以有效促进企业形成新质生产力。这一发现在经过控制更多维的固定效应、排除模型误设的可能、处理特殊样本、缓解内生性问题等一系列检验后依然成立。②制度成本通过改善要素配置效率的路径促进了企业新质生产力的形成；进一步将要素细分为资本、劳动及技术之后，本文观察到降低制度成本对三种要素的异质性影响，并发现短期内，提高技术配置效率是降低制度成本促进企业新质生产力形成的主要路径。③降低制度成本促使原本承受更高制度成本的企业形成了更多的新质生产力，特别反映出跨境电商综试区政策在降低制度成本方面的有效性。本文为如何看待制度成本与企业新质生产力的关系，如何进一步促进企业新质生产力的形成提供了实证证据和政策启示。
+                    本文使用2011-2020年中国A股上市公司数据，借助中国跨境电子商务综合试验区政策这一能够有效降低制度成本的外生冲击，
+                    创新性地采用多期双重差分模型首次在实证层面考察了制度成本与企业新质生产力的关系，规避了制度成本难以衡量的难题，
+                    主要发现包括：①制度成本的降低可以有效促进企业形成新质生产力。这一发现在经过控制更多维的固定效应、排除模型误设的可能、
+                    处理特殊样本、缓解内生性问题等一系列检验后依然成立。②制度成本通过改善要素配置效率的路径促进了企业新质生产力的形成；
+                    进一步将要素细分为资本、劳动及技术之后，本文观察到降低制度成本对三种要素的异质性影响，并发现短期内，提高技术配置效率
+                    是降低制度成本促进企业新质生产力形成的主要路径。③降低制度成本促使原本承受更高制度成本的企业形成了更多的新质生产力，
+                    特别反映出跨境电商综试区政策在降低制度成本方面的有效性。本文为如何看待制度成本与企业新质生产力的关系，如何进一步促进
+                    企业新质生产力的形成提供了实证证据和政策启示。
+                </div>
+            </li>
+              <li>
+                <a onclick="toggleAbstract('abstract3')" class="paper-link">业余时间数字化学习对劳动者收入的影响.2024.第一作者</a>
+                <div id="abstract3" class="abstract">
+                    数字技术的应用过分强调自动化，忽略引导技术积累人力资本。我们研究劳动者在工作之余进行数字化学习对收入的影响，
+                    从而为数字技术替代劳动力问题提供解决措施。研究发现，数字化学习促进了劳动者的人力资本积累，提高了收入水平。
+                    具体而言，数字化学习通过线上平台缓解信息不对称，弥补了线下关系网的不足；通过零碎化的学习方式增强了工作能力，
+                    补充了义务教育的不足；而且，数字化学习受到劳动需求者的认可，从而提升了劳动者在劳动力市场的表现。与传统的线下学习相比，
+                    数字化学习打破了教育资源的不平等，突破了地理位置限制，并不受天气条件的影响，有效地促进了人力资本的积累。
                 </div>
             </li>
             <li>
                 <a onclick="toggleAbstract('abstract3')" class="paper-link">在研</a>
-                <div id="abstract3" class="abstract">
+                <div id="abstract4" class="abstract">
                     本文正在研究中，内容即将发布。
                 </div>
             </li>
