--- a/profile.html
+++ b/profile.html
@@ -137,7 +137,7 @@
                 </div>
             </li>
               <li>
-                <a onclick="toggleAbstract('abstract3')" class="paper-link">业余时间数字化学习对劳动者收入的影响.2024.第一作者</a>
+                <a onclick="toggleAbstract('abstract3')" class="paper-link">成人数字化学习的劳动力市场回报.2024.第一作者（入选2024中国经济学年会分论坛汇报）</a>
                 <div id="abstract3" class="abstract">
                     数字技术的应用过分强调自动化，忽略引导技术积累人力资本。我们研究劳动者在工作之余进行数字化学习对收入的影响，
                     从而为数字技术替代劳动力问题提供解决措施。研究发现，数字化学习促进了劳动者的人力资本积累，提高了收入水平。
